<resources>
    <string name="app_name">Health Corner</string>
    <string name="login">Login</string>

    <!-- Register Page -->
    <string name="back_to_login">Back to login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="userName">User Name</string>
    <string name="userHeight">Height</string>
    <string name="userWeight">Weight</string>
    <string name="userAge">Age</string>


    <string name="navigation_drawer_open">Open navigation drawer2</string>
    <string name="navigation_drawer_close">Close navigation drawer3</string>
    <string name="nav_header_title" translatable="false">Android Studio4</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com5</string>
    <string name="nav_header_desc">Navigation header6</string>
    <string name="action_settings">Settings</string>
    <string name="chat_fragment_content">Chat Fragment</string>
    <string name="Share">Share</string>

    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drink_water_fragment_content">Count Drinking Water Total</string>
    <string name="BMI_title">Calculate BMI:</string>
    <string name="BMI_intro">Enter the following information to calculate your BMI value</string>
    <string name="BMI_submit">Calculate</string>
    <string name="Enter_height">Enter height</string>
    <string name="severely_underweight">severely underweight</string>
    <string name="very_underweight">very underweight</string>
    <string name="underweight">underweight</string>
    <string name="normal_weight">normal weight</string>
    <string name="over_weight">over weight</string>
    <string name="first_class_obese">first class obese</string>
    <string name="second_class_obese">second class obese</string>
    <string name="third_class_obese">third class obese</string>

    <!-- Dashboard and Navigation -->
    <string name="menu_bmi_calculator">BMI Calculator</string>
    <string name="menu_water_counter">Water Counter</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_artical">Super Food</string>
    <string name="menu_restaurant">Restaurant</string>
    <string name="menu_sport">Sport</string>
    <string name="dashboard_superfood">Super Food</string>
    <string name="dashboard_restaurant">Restaurant</string>
    <string name="dashboard_sport">Health Sport</string>
    <string name="dashboard_water">Water Counter</string>
    <string name="dashboard_bmi">BMI Calculator</string>
    <string name="dashboard_profile">Your Profile</string>
    <string name="superfood_title">Super Food</string>
    <string name="restaurant_title">Restaurant</string>
    <string name="sport_title">Sport</string>
    <string name="dashboard_desc1">View super food artical</string>
    <string name="dashboard_desc2">Health Restaurant in Hong Kong</string>
    <string name="dashboard_desc3">Do some sport improve your body status</string>
    <string name="dashboard_desc4">Calculate your BMI, make sure you are under health</string>
    <string name="dashboard_desc5">Drink at less 8 cups of water per day</string>
    <string name="dashboard_desc6">Set the time to remind you to work out</string>
    <string name="input_cm">Input CM</string>
    <string name="input_kg">Input KG</string>
    <string name="sport_chest">Chest</string>
    <string name="title_activity_obliques_video01">ObliquesVideo01</string>
    <string name="sport_obliques">Obliques</string>
    <string name="flat_belly">Flat Belly</string>
    <string name="arms">Arms</string>
    <string name="legs">Legs</string>
    <string name="_10_mins_intense_workout">10 Mins Intense Workout</string>
    <string name="sevva">Sevva</string>
    <string name="mana">Mana</string>
    <string name="restaurant_cedele">Cedele</string>
    <string name="restaurant_cedele_intro"><![CDATA[Bakery Cafe  Shop C G/F 58-64 Paterson Street  Fashion Walk, Causeway Bay HK  T: +852 2110 0490  Mon - Thu & Sun : 11am to 11pm  Fri & Sat : 11am to 11:30pm  Sun/PH : 11am to 11pm]]></string>
    <string name="cat_cave_cafe">Cat cave cafe</string>
    <string name="m2_kitchen">M2 Kitchen</string>
    <string name="the_hideout_coffees">The Hideout Coffees</string>
    <string name="papaya">Papaya</string>
    <string name="brazil_nuts">Brazil Nuts</string>
    <string name="spinach">Spinach</string>
    <string name="seaweed">Seaweed</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="papaya_intro">Papaya’s health benefits are almost countless. It is rich in tropical goodness as well as key flavonoids that help your body fight cancer cells. Carotenes in the fruit help prevent oral cavity and lung cancer, and other ingredients contribute to the management of free radicals</string>
    <string name="nuts_intro">Traditional weight-loss wisdom says stay away from fatty nuts, but diet experts have learned that monounsaturated fats that come in healthy nuts lower bad cholesterol and raise good cholesterol, making them a heart-healthy snack.</string>
    <string name="tomatos_intro">Like broccoli and kale, spinach is loaded with properties that enhance health across your entire body. According to researchers, spinach contains over a dozen flavonoids that are beneficial in fighting cancer and inflammation in the body.</string>
    <string name="dashboard_alarm">Trainnig Reminder</string>
    <string name="menu_alarm">Trainning Reminder</string>
    <string name="health_corner">Health Corner</string>


</resources>
