<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashborad"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_superfood_menu"
            android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
            android:title="@string/menu_artical" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/ic_local_dining_black_24dp"
            android:title="@string/menu_restaurant" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/menu_sport" />
        <item
            android:id="@+id/nav_bmi_calculator"
            android:icon="@drawable/ic_grid_on_black_24dp"
            android:title="@string/menu_bmi_calculator" />
        <item
            android:id="@+id/nav_water_counter"
            android:icon="@drawable/ic_local_drink_black_24dp"
            android:title="@string/menu_water_counter" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
