<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/BMI_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BMI_title"
            android:textSize="30sp"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/BMI_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BMI_intro"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:layout_centerInParent="true"/>

        <EditText
            android:id="@+id/BMI_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_cm"/>

        <EditText
            android:id="@+id/BMI_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_kg"/>

        <Button
            android:id="@+id/BMI_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BMI_submit"/>

        <TextView
            android:id="@+id/BMI_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>