<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#fcfcfc"
    android:gravity="center"
    android:id="@+id/ll">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="340dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:id="@+id/superfood_papaya">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/papaya01"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@color/black_overlay"
                            android:text="@string/papaya"
                            android:textSize="30sp"
                            android:textAlignment="center"
                            android:textColor="@color/backgroundcolor"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15dp"
                            android:text="@string/papaya_intro"
                            android:textColor="@color/backgroundcolor"
                            android:background="@color/black_overlay"
                            android:textStyle="bold" />



                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/superfood_nuts"
                    android:layout_width="340dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/nuts01"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:background="@color/black_overlay"
                            android:text="@string/brazil_nuts"
                            android:textSize="26sp"
                            android:textColor="@color/backgroundcolor"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15dp"
                            android:text="@string/nuts_intro"
                            android:background="@color/black_overlay"
                            android:textColor="@color/backgroundcolor"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/superfood_tomatoes"
                    android:layout_width="340dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/tomatoes01"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:background="@color/black_overlay"
                            android:text="@string/tomatoes"
                            android:textSize="30sp"
                            android:textColor="@color/backgroundcolor"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15dp"
                            android:text="@string/tomatos_intro"
                            android:background="@color/black_overlay"
                            android:textColor="@color/backgroundcolor"
                            android:textStyle="bold" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>